# learning_rs

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: learning_benches.rs
src/: basic.rs  lib.rs  main.rs  ownership.rs
src/modules/: mod.rs
src/modules/algorithms/: fft.rs  general.rs  mod.rs  sorting.rs
src/modules/llm/: attn.rs  core.rs  embedding.rs  mod.rs  model.rs  transformer.rs
src/modules/rust_basics/: basic.rs  mod.rs
tests/: learning_tests.rs  llm_integration_test.rs
